메인 이미지 수정 / class명 수정

--- a/portal/html/USR-1161-H-CONTN.html
+++ b/portal/html/USR-1161-H-CONTN.html
@@ -358,7 +358,7 @@
                             </dl>
                         </div>
 
-                        <div class="img"><img src="../images/content/img_edu_01.png" alt="1,400여명의 벤처캐피탈리스트 양성 > 2019년 벤처캐피탈 신규투자액 4조월, 벤처기업 수 3.7ㅁ난개 성과 달성"></div>
+                        <div class="img"><img src="../images/content/img_edu_01.png" alt="1,400여명의 벤처캐피탈리스트 양성 > 2019년 벤처캐피탈 신규투자액 4조월, 벤처기업 수 3.7만개 성과 달성"></div>
     
                     </div>
         
