--- a/portal/html/USR-1341-F-LIST.html
+++ b/portal/html/USR-1341-F-LIST.html
@@ -1226,7 +1226,7 @@
                                                             </li>
                                                             <li>
                                                                 <div class="btn_box">
-                                                                    <button class="btn_navy disable">파트너 신청</button>
+                                                                    <button class="btn_navy disabled">파트너 신청</button>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -1263,7 +1263,7 @@
                                                             </li>
                                                             <li>
                                                                 <div class="btn_box">
-                                                                    <button class="btn_navy disable">파트너 신청</button>
+                                                                    <button class="btn_navy disabled">파트너 신청</button>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -1300,7 +1300,7 @@
                                                             </li>
                                                             <li>
                                                                 <div class="btn_box">
-                                                                    <button class="btn_navy disable">파트너 신청</button>
+                                                                    <button class="btn_navy disabled">파트너 신청</button>
                                                                 </div>
                                                             </li>
                                                         </ul>
@@ -1337,7 +1337,7 @@
                                                             </li>
                                                             <li>
                                                                 <div class="btn_box">
-                                                                    <button class="btn_navy disable">파트너 신청</button>
+                                                                    <button class="btn_navy disabled">파트너 신청</button>
                                                                 </div>
                                                             </li>
                                                         </ul>
