리스트 정리

--- a/pub_list.html
+++ b/pub_list.html
@@ -128,7 +128,7 @@
                     path:'./portal/html/pub_guide.html',
                     date:'',
                     mdate:'',
-                    con:'작업중',
+                    con:'',
                     etc:''
                 },
                 {
@@ -137,7 +137,7 @@
                     path:'./portal/html/layout.html',
                     date:'',
                     mdate:'',
-                    con:'작업중',
+                    con:'',
                     etc:''
                 },
 
@@ -225,7 +225,7 @@
                     path:'./portal/html/USR-1010-F-FORM.html',
                     date:'2022-08-31',
                     mdate:'2022-09-05',
-                    con:'완료',
+                    con:'',
                     etc:'<span class="none"></span>1018 내정보관리에서 진행'
                 },
                 {
@@ -279,7 +279,7 @@
                     path:'./portal/html/USR-1054-F-FORM.html',
                     date:'2022-09-19',
                     mdate:'2022-09-27',
-                    con:'완료',
+                    con:'재설계',
                     etc:''
                 },
                 {
@@ -288,7 +288,7 @@
                     path:'./portal/html/USR-1055-F-FORM.html',
                     date:'',
                     mdate:'2022-10-04',
-                    con:'작업중',
+                    con:'재설계',
                     etc:'<span class="red">기획서 없음</span>'
                 },
                 {
@@ -297,7 +297,7 @@
                     path:'./portal/html/USR-1056-F-LIST.html',
                     date:'2022-09-29',
                     mdate:'2022-10-11',
-                    con:'완료',
+                    con:'재설계',
                     etc:''
                 },
                 {
@@ -306,7 +306,7 @@
                     path:'./portal/html/USR-1056-F-DTL.html',
                     date:'',
                     mdate:'2022-10-11',
-                    con:'작업중',
+                    con:'재설계',
                     etc:''
                 },
                 {
@@ -315,7 +315,7 @@
                     path:'./portal/html/USR-1052-B-LIST.html',
                     date:'2022-08-29',
                     mdate:'2022-09-26',
-                    con:'완료',
+                    con:'재설계',
                     etc:'[게시판 타입1 - 목록]'
                 },
                 {
@@ -324,7 +324,7 @@
                     path:'./portal/html/USR-1052-B-DTL.html',
                     date:'2022-08-29',
                     mdate:'2022-09-26',
-                    con:'완료',
+                    con:'재설계',
                     etc:'[게시판 타입1 - 상세]'
                 },
                 {
@@ -342,7 +342,7 @@
                     path:'./portal/html/USR-1061-H-CONTN.html',
                     date:'2022-09-26',
                     mdate:'2022-10-05',
-                    con:'완료',
+                    con:'재설계',
                     etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
                 {
@@ -351,7 +351,7 @@
                     path:'./portal/html/USR-1063-H-CONTN.html',
                     date:'2022-09-26',
                     mdate:'2022-10-07',
-                    con:'완료',
+                    con:'재설계',
                     etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
                 },
 
@@ -536,7 +536,7 @@
                     path:'./portal/html/USR-1236-H-CONTN.html',
                     date:'2022-09-29',
                     mdate:'2022-10-20',
-                    con:'완료',
+                    con:'',
                     etc:'<span class="none"></span>1018 제공할 프로그램 미존재로 삭제'
                 },
                 {
@@ -964,7 +964,7 @@
                     path:'./portal/html/USR-2043-F-LIST.html',
                     date:'2022-09-08',
                     mdate:'',
-                    con:'완료',
+                    con:'',
                     etc:'<span class="none"></span>1018 기능 삭제'
                 },
                 {
@@ -992,7 +992,7 @@
                     path:'./portal/html/USR-2044-F-FORM.html',
                     date:'2022-09-13',
                     mdate:'2022-11-17',
-                    con:'완료',
+                    con:'',
                     etc:'<span class="none"></span>1018 팝업으로 대체'
                 },
                 {
