부서별 수정사항 반영

--- a/portal/html/USR-1051-H-CONTN.html
+++ b/portal/html/USR-1051-H-CONTN.html
@@ -332,7 +332,7 @@
                         <div class="tit_box">
                             <h4><span></span>벤처투자마트 안내</h4>
                         </div>
-                        <p>벤처투자마트는 엔젤 및 VC투자 유치를 위한 초기 창업기업·중소기업-투자자 간 상담회 개최를 통해기업에게는 투자유치 기회를, 투자자는 기업발굴 통로의 역할을 하는 프로그램입니다.</p>
+                        <p>벤처투자마트는 엔젤 및 VC투자 유치를 위한 초기 창업기업·중소기업-투자자 간 상담회 개최를 통해 기업에게는 투자유치 기회를, 투자자는 기업발굴 통로의 역할을 하는 프로그램입니다.</p>
                     </div>
 
                     <div class="list_item">
@@ -345,7 +345,7 @@
                         </div>
                     </div>
 
-                    <div class="list_item">
+                    <div class="list_item bd_b">
                         <div class="tit_box">
                             <h4><span></span>벤처투자사랑방 안내</h4>
                         </div>
