--- a/portal/html/USR-1061-H-CONTN.html
+++ b/portal/html/USR-1061-H-CONTN.html
@@ -320,7 +320,7 @@
 
                 <div class="tit_box">
                     <h3>VC구주유통망</h3>
-                    <span>설명</span>
+                    <span>벤처투자자산 매매거래를 위한 플랫폼입니다.</span>
                 </div>
 
                 <div class="search_item">
