--- a/portal/html/USR-1063-H-CONTN.html
+++ b/portal/html/USR-1063-H-CONTN.html
@@ -320,7 +320,7 @@
 
                 <div class="tit_box">
                     <h3>M&A 거래정보망</h3>
-                    <span>설명</span>
+                    <span>M&A를 희망하는 중소∙벤처기업 및 M&A 전문 자문기관을 중심으로 매수 및 매도 DB를 구축하여 기업, 자문기관, 유관기관 등 다양한 주체가 M&A 거래정보망을 통해 자율적인 M&A 매칭 및 거래가 이뤄지도록 지원하는 M&A 온라인 거래 플랫폼입니다.</span>
                 </div>
 
                 <div class="search_item">
@@ -382,8 +382,8 @@
                                                     <dt>신청절차</dt>
                                                     <dd>M&A 기업가치평가비용 지원 안내 및 접수(상시)</dd>
                                                     <dd>M&A 기업가치평가비용 지원 신청서 및 서류 제출<span class="font_blue">* 우편 또는 방문접수</span></dd>
-                                                    <dd>M&a 기업가치평가비용 지원 안내 및 접수(상시)<span class="font_blue">* 허위내용 발견 시 해당 자문기관 지원 전체 취소</span></dd>
-                                                    <dd>현장실사 및 서면평가(필요시)</dd>
+                                                    <dd>지원 신청서 확인 및 제출서류 점검</dd>
+                                                    <dd>현장 또는 서면실사 (기업가치평가보고서 내용 확인, 지원요건 충족 확인 등)</dd>
                                                     <dd>지원대상 선정</dd>
                                                     <dd>지원여부 최종승인 및 예산 집행</dd>
                                                 </dl>
@@ -450,7 +450,7 @@
                                     <dl class="mna_box">
                                         <dt>(지원대상)</dt>
                                         <dd>
-                                            M&A 거래정보망(www.smes.go.kr/mna/index.do)에 등록된 당해연도 신규 M&A 자문기관
+                                            M&A 거래정보망(www.smes.go.kr/mna/index.do)에 등록된 자문기관 중, 당해년도 신규등록 및 평가등급(S~B) 해당 자문기관
                                         </dd>
                                     </dl>
                                     <dl class="mna_box">
@@ -472,7 +472,7 @@
                                                 <dl>
                                                     <dt>신청절차</dt>
                                                     <dd>M&A 기업정보 조회서비스 비용 지원 안내 및 접수(반기)</dd>
-                                                    <dd>M&A 상담·자문비용 지원 신청 및 서류 제출<span class="font_blue">* 우편 또는 방문접수</span></dd>
+                                                    <dd>M&A 기업정보 조회서비스 지원 신청서 및 서류 제출<span class="font_blue">* 온라인 접수</span></dd>
                                                     <dd>지원 신청서 확인 및 관련서류 검토<span class="font_blue">* 허위내용 발견 시 해당 자문기관 지원 전체 취소</span></dd>
                                                     <dd>지원여부 최종승인 및 예산 집행</dd>
                                                 </dl>
@@ -504,7 +504,7 @@
                                     <dl class="mna_box">
                                         <dt>(신청절차)</dt>
                                         <dd>
-                                            M&A거래정보망 등록기업, 자문기관, 유관기관 등에 별도안내 예정
+                                            M&A 거래정보망 등록기업, 자문기관, 유관기관 등에 별도 안내 및 신청접수 예정
                                         </dd>
                                     </dl>
                                 </li>
@@ -689,7 +689,7 @@
                                                 </div>
                                             </td>
                                             <td>
-                                                <div>02-6250-5754</div>
+                                                <div>02-6250-5706</div>
                                             </td>
                                             <td>
                                                 (우)06149<br/>
@@ -749,7 +749,7 @@
                                                 </div>
                                             </td>
                                             <td>
-                                                <div>02-6322-5331</div>
+                                                <div>02-3425-4989</div>
                                             </td>
                                             <td>
                                                 (우)04538<br/>
