--- a/portal/html/USR-2041-F-FORM.html
+++ b/portal/html/USR-2041-F-FORM.html
@@ -363,18 +363,23 @@
                                 <tr>
                                     <th scope="row"><label for="sel_01">전화번호</label></th>
                                     <td colspan="3">
-                                        <div class="inp_group tel">
-                                            <div class="sel_box">
-                                                <select id="sel_01">
-                                                    <option value="">선택</option>
-                                                    <option value="">070</option>
-                                                </select>
+                                        <div class="inp_group search tel_btn">
+                                            <div class="inp_group tel">
+                                                <div class="sel_box">
+                                                    <select id="sel_01">
+                                                        <option value="">선택</option>
+                                                        <option value="">070</option>
+                                                    </select>
+                                                </div>
+                                                <div class="inp_box">
+                                                    <input type="text" id="input_06">
+                                                </div>
+                                                <div class="inp_box">
+                                                    <input type="text" id="input_07">
+                                                </div>
                                             </div>
-                                            <div class="inp_box">
-                                                <input type="text" id="input_06">
-                                            </div>
-                                            <div class="inp_box">
-                                                <input type="text" id="input_07">
+                                            <div class="box_btn">
+                                                <button class="search">중복확인</button>
                                             </div>
                                         </div>
                                     </td>
