--- a/portal/html/USR-4010-H-CONTN.html
+++ b/portal/html/USR-4010-H-CONTN.html
@@ -308,7 +308,7 @@
                 <div class="txt_content">
 
                     <div class="tit_box">
-                        <p>&lt; 한국벤처캐피탈협회 &gt;('<span class="f_color_red">www.vps.go.kr</span>'이하 '<span class="f_color_red">벤처투자종합포털</span>')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</p>
+                        <p>&lt; 한국벤처캐피탈협회 &gt;('<span class="f_color_red">www.vcs.go.kr</span>'이하 '<span class="f_color_red">벤처투자종합포털</span>')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.</p>
                         <div class="txt_right">이 개인정보처리방침은 2022년 11월 1부터 적용됩니다.</div>
                     </div>
 
@@ -317,7 +317,7 @@
                         <dl class="txt_item">
                             <dt>제1조(개인정보의 처리 목적)</dt>
                             <dd>
-                                <strong>&lt; 한국벤처캐피탈협회 &gt;('<span class="f_color_red">www.vps.go.kr</span>'이하 '<span class="f_color_red">벤처투자종합포털</span>')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.</strong>
+                                <strong>&lt; 한국벤처캐피탈협회 &gt;('<span class="f_color_red">www.vcs.go.kr</span>'이하 '<span class="f_color_red">벤처투자종합포털</span>')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.</strong>
                                 <ol class="txt_item_list">
                                     <li>
                                         <dl>
@@ -827,7 +827,7 @@
                                                 </dl>
                                                 <dl>
                                                     <dt>담당자 : </dt>
-                                                    <dd>홍길동</dd>
+                                                    <dd>신재은</dd>
                                                 </dl>
                                                 <dl>
                                                     <dt>연락처 : </dt>
@@ -896,7 +896,7 @@
                                                 </dl>
                                                 <dl>
                                                     <dt>담당자 : </dt>
-                                                    <dd>홍길동</dd>
+                                                    <dd>신재은</dd>
                                                 </dl>
                                                 <dl>
                                                     <dt>연락처 : </dt>
@@ -925,7 +925,7 @@
                                         </dl>
                                         <dl>
                                             <dt>담당자 : </dt>
-                                            <dd>홍길동</dd>
+                                            <dd>신재은</dd>
                                         </dl>
                                         <dl>
                                             <dt>연락처 : </dt>
