--- a/pub_list.html
+++ b/pub_list.html
@@ -262,7 +262,7 @@
                     date:'2022-09-20',
                     mdate:'2022-09-15',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:'1025 내용텍스트수정'
                 },
                 {
                     division: '',
@@ -271,7 +271,7 @@
                     date:'2022-09-16',
                     mdate:'2022-09-22',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:'1025 텍스트 및 class수정'
                 },
                 {
                     division: '',
@@ -343,7 +343,7 @@
                     date:'2022-09-26',
                     mdate:'2022-10-05',
                     con:'재설계',
-                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span> 1025 서브타이틀 수정'
                 },
                 {
                     division: '',
@@ -352,7 +352,7 @@
                     date:'2022-09-26',
                     mdate:'2022-10-07',
                     con:'재설계',
-                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>1025 내용 텍스트 수정'
                 },
 
                 // 투자가이드
@@ -928,7 +928,7 @@
                     date:'2022-09-07',
                     mdate:'2022-11-16',
                     con:'완료',
-                    etc:''
+                    etc:'1025 전화번호 중복확인 버튼 추가'
                 },
                 {
                     division: '',
@@ -974,7 +974,7 @@
                     date:'2022-09-13',
                     mdate:'2022-11-17',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:'1025 검색 수정'
                 },
                 {
                     division: '',
