--- a/portal/html/USR-1040-F-DASH.html
+++ b/portal/html/USR-1040-F-DASH.html
@@ -326,6 +326,7 @@
                             창업투자회사의 공시 시스템<br/>
                             DIVA(Disclosure Information of Venture Capital Analysis)는
                         </dt>
+                        <!-- 1024 텍스트 수정 -->
                         <dd>중소벤처기업부에 등록된 창업투자회사의 투자활동과 관련된 정보를 제공하여 창업투자회사의 책임있는 경영체제 확립과 대외 신뢰성을 제고하는 창업투자회사의 공시시스템입니다. DIVA는 창업투자회사가 매월 중소벤처기업부에 보고하는 업무운용상황보고 및 매년 제출하는 감사보고서를 분석 집계한 자료를 토대로 공시하며, 개별창업투자회사뿐만 아니라 벤처캐피탈업계의 현황을 공시하고 있습니다.</dd>
                         <dd>
                             <div class="btn_box">
@@ -338,7 +339,7 @@
                             창업기획자의 공시시스템<br/>
                             DIAA(Disclosure Information of Accelerator Analysis)는
                         </dt>
-                        <dd>중소벤처기업부에 등록된 창업투자회사의 투자활동과 관련된 정보를 제공하여 창업투자회사의 책임있는 경영체제 확립과 대외 신뢰성을 제고하는 창업투자회사의 공시시스템입니다. DIVA는 창업투자회사가 매월 중소벤처기업부에 보고하는 업무운용상황보고 및 매년 제출하는 감사보고서를 분석 집계한 자료를 토대로 공시하며, 개별창업투자회사뿐만 아니라 벤처캐피탈업계의 현황을 공시하고 있습니다.</dd>
+                        <dd>중소벤처기업부에 등록된 창업기획자의 정보(초기창업자 선발ㆍ투자ㆍ보육 등)을 제공하여 대외 신뢰성을 확보하기 위한 창업기획자의 공시시스템입니다. DIVA는 창업투자회사가 매월 중소벤처기업부에 보고하는 업무운용상황보고 및 매년 제출하는 감사보고서를 분석 집계한 자료를 토대로 공시하며, 개별창업투자회사뿐만 아니라 벤처캐피탈업계의 현황을 공시하고 있습니다.</dd>
                         <dd>
                             <div class="btn_box">
                                 <a href="" class="btn_navy">DIVA 바로가기 ></a>
