--- a/portal/html/USR-2044-F-LIST.html
+++ b/portal/html/USR-2044-F-LIST.html
@@ -325,6 +325,36 @@
 
                         <!-- 첫번째 탭 -->
                         <div class="on tab_content_01">
+
+                            <div class="board_infobox">
+                                <div class="total">전체 <span>150</span>건</div>
+                                <div class="search_box">
+                                    <div class="sel_group">
+                                        <div class="sel_box">
+                                            <select>
+                                                <option value="">전체</option>
+                                                <option value="">투자제안</option>
+                                                <option value="">개인쪽지</option>
+                                                <option value="">파트너 알림</option>
+                                                <option value="">채용제안</option>
+                                                <option value="">벤처투자 부당행위 신고센터</option>
+                                                <option value="">벤처투자마트</option>
+                                                <option value="">벤처투자상담</option>
+                                                <option value="">커뮤니티</option>
+                                            </select>
+                                        </div>
+                                        <div class="sel_box">
+                                            <select>
+                                                <option value="">검색조건</option>
+                                                <option value="">제목</option>
+                                                <option value="">내용</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <button>검색</button>
+                                </div>
+                            </div>
                             
                             <!-- 게시판 테이블 -->
                             <div class="tbl_longcard type_chk">
@@ -580,6 +610,32 @@
 
                         <!-- 두번째 탭 -->
                         <div class="tab_content_02">
+
+                            <div class="board_infobox">
+                                <div class="total">전체 <span>5</span>건</div>
+                                <div class="search_box">
+                                    <div class="sel_group">
+                                        <div class="sel_box">
+                                            <select>
+                                                <option value="">전체</option>
+                                                <option value="">투자제안</option>
+                                                <option value="">개인쪽지</option>
+                                                <option value="">파트너 알림</option>
+                                                <option value="">채용제안</option>
+                                            </select>
+                                        </div>
+                                        <div class="sel_box">
+                                            <select>
+                                                <option value="">검색조건</option>
+                                                <option value="">제목</option>
+                                                <option value="">내용</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <input type="text" placeholder="검색어를 입력해주세요.">
+                                    <button>검색</button>
+                                </div>
+                            </div>
 
                             <!-- 게시판 테이블 -->
                             <div class="tbl_longcard type_chk">
