포털소개 텍스트 수정

--- a/portal/html/USR-1310-H-CONTN.html
+++ b/portal/html/USR-1310-H-CONTN.html
@@ -382,10 +382,11 @@
                             </div>
                         </div>
                         <dl>
-                            <dt><strong>VCS Business Identity의 의미</strong></dt>
+                            <dt><strong>VCS Brand Identity의 의미</strong></dt>
                             <dd>
-                                한국벤처투자는 2030 비전으로 ‘전문·상생·신뢰’ 기반의 벤처금융전문기관으로의 성장을 선언했습니다.<br/>
-                                이를 담아 한국벤처투자의 CI는 전문성을 나타내는 육각형의 심볼마크 안에 상생의 빛을 의미하는 K와 신뢰의 상징 파란색을 담았습니다.
+                                벤처투자종합포털(Venture investment Comprehensive portal Service)의 BI는 <br/>
+                                2022년 펜톤칼라인 ‘베리페리(very Peri)’로 푸른색이 주는 신뢰감과 보라색계열의 귀여움을 상징하는 <strong>최신 트렌드 색상을 반영</strong>하였으며, <br/>
+                                영문명칭의 약자인 <strong>‘V C S’</strong> 는 <strong>‘성장과 상승세’</strong>를 나타내는 함축적인 그래프로 표현하였습니다.
                             </dd>
                         </dl>
                     </div>
