--- a/portal/html/USR-1310-H-CONTN.html
+++ b/portal/html/USR-1310-H-CONTN.html
@@ -376,9 +376,9 @@
                         <div class="design_box">
                             <div class="design_bi">
                                 <div class="img_bi"><img src="../images/logo/logo_w.png" alt="BI 이미지"></div>
-                                <!-- <div class="btn_box bg">
-                                    <a href="../images/logo/logo.zip" class="download" download>벤처투자종합포털 BI 다운로드</a>
-                                </div> -->
+                                <div class="btn_box bg">
+                                    <a href="../images/logo/logo_w.png" class="download" download>벤처투자종합포털 BI 다운로드</a>
+                                </div>
                             </div>
                         </div>
                         <dl>
