동환씨 요청 js수정 및 1027 고객요청사항 수정

--- a/portal/html/USR-1040-F-DASH.html
+++ b/portal/html/USR-1040-F-DASH.html
@@ -339,7 +339,7 @@
                             창업기획자의 공시시스템<br/>
                             DIAA(Disclosure Information of Accelerator Analysis)는
                         </dt>
-                        <dd>중소벤처기업부에 등록된 창업기획자의 정보(초기창업자 선발ㆍ투자ㆍ보육 등)을 제공하여 대외 신뢰성을 확보하기 위한 창업기획자의 공시시스템입니다. DIVA는 창업투자회사가 매월 중소벤처기업부에 보고하는 업무운용상황보고 및 매년 제출하는 감사보고서를 분석 집계한 자료를 토대로 공시하며, 개별창업투자회사뿐만 아니라 벤처캐피탈업계의 현황을 공시하고 있습니다.</dd>
+                        <dd>중소벤처기업부에 등록된 창업기획자의 정보(초기창업자 선발ㆍ투자ㆍ보육 등)을 제공하여 대외 신뢰성을 확보하기 위한 창업기획자의 공시시스템입니다. DIAA는 창업기획자가 중소벤처기업부에 보고하는 업무운용상황보고 및 감사보고서를 분석 집계한 자료를 토대로 공시하고 있습니다.</dd>
                         <dd>
                             <div class="btn_box">
                                 <a href="" class="btn_navy">DIVA 바로가기 ></a>
