--- a/portal/html/USR-1051-H-CONTN.html
+++ b/portal/html/USR-1051-H-CONTN.html
@@ -383,6 +383,7 @@
                                 </ul>
                             </dd>
                         </dl>
+                        <!-- 1027 고객요청사항으로 인한 삭제
                         <dl>
                             <dt><strong>사업내용</strong></dt>
                             <dd>
@@ -392,7 +393,8 @@
                                     <li>엔젤투자자 대상 투자마트(투자설명회) 개최(연6회)</li>
                                 </ul>
                             </dd>
-                        </dl>
+                        </dl> 
+                        -->
                         <dl>
                             <dt><strong>책임의 한계</strong></dt>
                             <dd>
