노이미지 적용 및 이미지 크기 수정

--- a/portal/html/USR-1010-F-LIST.html
+++ b/portal/html/USR-1010-F-LIST.html
@@ -851,7 +851,7 @@
                         <li>
                             <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/search/noimage_search.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -874,7 +874,7 @@
                         <li>
                             <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/search/noimage_search.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -897,7 +897,7 @@
                         <li>
                             <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/search/noimage_search.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -920,7 +920,7 @@
                         <li>
                             <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/search/noimage_search.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -943,7 +943,7 @@
                         <li>
                             <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/search/noimage_search.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -966,7 +966,7 @@
                         <li>
                             <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/search/noimage_search.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -989,7 +989,7 @@
                         <li>
                             <a href="./USR-1010-F-DTL.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/search/noimage_search.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
