--- a/portal/html/USR-1232-B-LIST.html
+++ b/portal/html/USR-1232-B-LIST.html
@@ -363,7 +363,7 @@
                                     <span>웹진</span>
                                 </div>
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/news/noimage_news.jpg" alt="임시이미지">
                                 </div>
                                 <div class="tit">
                                     <strong>VC DISCOVERY</strong>
@@ -378,7 +378,7 @@
                                     <span>뉴스레터</span>
                                 </div>
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/news/noimage_news.jpg" alt="임시이미지">
                                 </div>
                                 <div class="tit">
                                     <strong>한국벤처투자 온라인 뉴스레터</strong>
@@ -393,7 +393,7 @@
                                     <span>카드뉴스</span>
                                 </div>
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/news/noimage_news.jpg" alt="임시이미지">
                                 </div>
                                 <div class="tit">
                                     <strong>'포스트 팬데믹' 반기는 여행 스타트업' 포스트 팬데믹' 반기는 여행 스타트업</strong>
@@ -407,7 +407,7 @@
                                     <span>웹진</span>
                                 </div>
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/news/noimage_news.jpg" alt="임시이미지">
                                 </div>
                                 <div class="tit">
                                     <strong>VC DISCOVERY</strong>
@@ -422,7 +422,7 @@
                                     <span>뉴스레터</span>
                                 </div>
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/news/noimage_news.jpg" alt="임시이미지">
                                 </div>
                                 <div class="tit">
                                     <strong>한국벤처투자 온라인 뉴스레터</strong>
@@ -437,7 +437,7 @@
                                     <span>카드뉴스</span>
                                 </div>
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/news/noimage_news.jpg" alt="임시이미지">
                                 </div>
                                 <div class="tit">
                                     <strong>'포스트 팬데믹' 반기는 여행 스타트업' 포스트 팬데믹' 반기는 여행 스타트업</strong>
