--- a/portal/html/USR-1330-F-LIST.html
+++ b/portal/html/USR-1330-F-LIST.html
@@ -471,7 +471,7 @@
                         <li>
                             <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/commu/noimage_commu.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -491,7 +491,7 @@
                         <li>
                             <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/commu/noimage_commu.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -511,7 +511,7 @@
                         <li>
                             <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/commu/noimage_commu.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -531,7 +531,7 @@
                         <li>
                             <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/commu/noimage_commu.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -551,7 +551,7 @@
                         <li>
                             <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/commu/noimage_commu.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -571,7 +571,7 @@
                         <li>
                             <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/commu/noimage_commu.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
@@ -591,7 +591,7 @@
                         <li>
                             <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
-                                    <img src="../images/content/newsletter.png" alt="임시이미지">
+                                    <img src="../images/noimage/commu/noimage_commu.jpg" alt="임시이미지">
                                 </div>
                                 <div class="group_box">
                                     <div class="state_box type_02">
