벤처투자 신고안내 수정

--- a/portal/html/USR-1350-F-DASH.html
+++ b/portal/html/USR-1350-F-DASH.html
@@ -358,8 +358,15 @@
                                         <dt>신고유형</dt>
                                         <dd>
                                             <ul>
-                                                <li>컨텐츠없음</li>
-                                                <li>&nbsp;</li>
+                                                <li>창업투자회사가 투자업체로부터 비정상적인 거래를 통해 자금을 받는 행위</li>
+                                                <li>창업투자회사가 원금보장 등의 별도의 조건을 설정하는 행위</li>
+                                                <li>창업투자회사가 그 특수관계인 등과 투자 또는 대여 등의 거래를 하는 행위</li>
+                                                <li>창업투자회사가 제3자를 위한 주식 취득이나 자금 중개를 하는 행위</li>
+                                                <li>창업투자회사 대주주가 비공개자료 또는 정보를 요구하는 행위</li>
+                                                <li>창업투자회사의 대주주가 창업투자회사 경영에 부당한 영향력을 행사하는 행위</li>
+                                                <li>창업투자회사의 대주주가 창업투자회사에 위법행위를 요구하는 행위</li>
+                                                <li>창업투자회사의 대주주가 창업투자회사에 불리한 조건으로 거래를 요구하는 행위</li>
+                                                <li>창업투자회사의 임직원 등이 공개되지 아니한 정보를 정당한 사유 없이 자기 또는 제3자의 이익을 위하여 이용하는 행위(벤처투자법 제42조 위반)</li>
                                             </ul>
                                         </dd>
                                     </dl>
@@ -379,19 +386,19 @@
                             <ul>
                                 <li>
                                     <span>STEP1</span>
-                                    <strong>신고접수</strong>
+                                    <strong>부당행위 신고</strong>
                                 </li>
                                 <li>
                                     <span>STEP2</span>
-                                    <strong>담당자 부여 및 조사 실시</strong>
+                                    <strong>사실조사</strong>
                                 </li>
                                 <li>
                                     <span>STEP3</span>
-                                    <strong>신고 처리</strong>
+                                    <strong>조치(행정처분,수사의뢰 등)</strong>
                                 </li>
                                 <li>
                                     <span>STEP4</span>
-                                    <strong>결과 통보</strong>
+                                    <strong>처리결과 통보</strong>
                                 </li>
                             </ul>
                         </div>
