footer 컨텐츠내용 추가 및 회원가입 약관쪽 내용 수정

--- a/pub_list.html
+++ b/pub_list.html
@@ -838,7 +838,7 @@
                     date:'2022-09-05',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:'1031 이용약관/ 개인정보 수집이용동의 텍스트 내용 수정'
                 },
                 {
                     division: '',
@@ -1089,7 +1089,7 @@
                     date:'2022-10-20',
                     mdate:'2022-12-01',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:'1031 내용 텍스트 수정'
                 },
                 {
                     division: '',
@@ -1104,10 +1104,19 @@
                     division: '',
                     depth1:'이메일무단수집거부',
                     path:'./portal/html/USR-4210-H-CONTN.html',
-                    date:'2022-09-26',
+                    date:'2022-10-31',
                     mdate:'2022-12-02',
-                    con:'작업중',
-                    etc:'<span class="red">컨텐츠 없음</span><span class="blue">디자인요청</span> [2차디자인]'
+                    con:'완료',
+                    etc:'<span class="blue">디자인 확인필요</span>'
+                },
+                {
+                    division: '',
+                    depth1:'저작권보호방침',
+                    path:'./portal/html/USR-4310-H-CONTN.html',
+                    date:'2022-10-31',
+                    mdate:'',
+                    con:'완료',
+                    etc:'[2차디자인]'
                 },
                 // <span class="none"></span>1018 footer 콤보박스 바로가기로 대체
                 {
